# au-thentic-tracker-backend

./: .env  Dockerfile  README.md  alembic.ini  db.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  settings.py
alembic/: env.py
app/: main.py
app/api/: gold_price.py  gold_purchases.py  settings.py
app/crud/: gold_purchase.py  settings.py
app/db/: database.py
app/models/: gold_purchase.py  settings.py
app/schemas/: gold_purchase.py  settings.py
router/: goldRoutes.py
