[project]
name = "au-thentic-tracker-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "fastapi-security>=0.5.0",
    "fastapi-users>=14.0.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=1.10.22",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
